# ccanalysis

./: .gitignore  20210330_000810_p10_q4_N10_s2_insH_basH_tags_trunc000_ccs.pbdat  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  _NOTES  callgrind.out.2999307  cc.cfg  cc.cfg_example  ccanalysis  ccanalysis.cpp  ccanalysis.h  ccset.pb.cc  ccset.proto  ccset_pb2.py  cmake_install.cmake  hdf2tsv.cpp  histogram.cfg_example  histogram.cpp  histogram.h  histogram_round.h  io.cpp  io.h  make_pgo.sh  mkproto.sh  nohup.out  out_v2  out_v4_withmeastime  out_valid  rewinding_ccanalysis.cpp  rewinding_ccanalysis.h  tools.cpp  tools.h
.cmake/api/v1/reply/: cache-v2-ee5d2e3fd5a12a13e4f6.json  cmakeFiles-v1-631c5909acd500d9cd10.json  codemodel-v2-4a3177edbaef4d75ffed.json  index-2021-09-10T12-13-24-0073.json  target-ccanalysis-RELEASE-29aea5d5fdb79027bf2d.json
inttime/: CMakeCache.txt  CMakeLists.txt  Makefile  cca_inttime  cca_inttime.cpp  cca_inttime.h  ccint.cfg  ccset.pb.cc  ccset.pb.h  ccset.proto  ccset_pb2.py  cmake_install.cmake
pgo/: #home#psiminus#Nextcloud#projects#rewinding#data#performance#cpp#CMakeFiles#ccanalysis_per1.dir#ccanalysis_per1.cpp.gcda  #home#psiminus#Nextcloud#projects#rewinding#data#performance#cpp#CMakeFiles#ccanalysis_per1.dir#ccset.pb.cc.gcda
release/: CMakeCache.txt  Makefile  ccanalysis  cmake_install.cmake  vec.opt
schemes/: histogramset.proto  tags.capnp
scripts/: histogram.py  plothistogram.py  txttohdf.py
src/: cap2tsv.cpp  cap2tsv.h  hdf2tsv.cpp  hdf2tsv.h  histcat.cpp  histcat.h  histogram.cpp  histogram.h  histogram_round.cpp  io.cpp  io.h  io_protobuf.cpp  io_protobuf.h  rewinding_ccanalysis.cpp  rewinding_ccanalysis.h  tagsplit.cpp  tagsplit.h  tools.cpp  tools.h  tsv2cap.cpp  tsv2cap.h  tsv2hdf.cpp  tsv2hdf.h
src/schemes/: ccset.pb.cc  ccset.pb.h  ccset_pb2.py  tags.capnp.c++  tags.capnp.h
